--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  Readonly-1.03.tar.bz2: 1cf860fbd4643182c5002fdaf73f8985badf05c3
 sources:
-  "Readonly-1.03.tar.bz2": 1cf860fbd4643182c5002fdaf73f8985badf05c3
+  Readonly-1.04.tar.gz: d0bd689940695f4299cb587aac881371ab42fc34
